k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: schmidtdse
  name: cacao-demo
  labels:
    app: cacao-demo
spec:
  type: ClusterIP
  selector:
    app: cacao-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
